correct footnotes on each page

--- a/code/templates/contact.html
+++ b/code/templates/contact.html
@@ -73,7 +73,7 @@
                                aria-haspopup="true" aria-expanded="false">Blog</a>
                         </li>
                         <li class="nav-item dropdown submenu mega_menu tab-demo">
-                            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
+                            <a href="/job-recommendation" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
                                aria-haspopup="true" aria-expanded="false">Job Recommendation</a>
                         </li>
                         <li class="nav-item dropdown submenu">
@@ -372,9 +372,10 @@
                         <div class="f_widget link_widget wow fadeInUp" data-wow-delay="0.4s">
                             <h3 class="f_title">Blog</h3>
                             <ul class="list-unstyled link_list">
-                                <li><a href="life-skills.html">Life Skills</a></li>
-                                <li><a href="physical-health.html">Physical Health</a></li>
-                                <li><a href="mental-health.html">Mental Health</a></li>
+                                <li><a href="/blog">Blog</a></li>
+                                <li><a href="/blog-category/Skills">Life Skills</a></li>
+                                <li><a href="/blog-category/Health">Physical & Mental Health</a></li>
+                                <li><a href="/blog-category/Others">Others</a></li>
                                 <!--                                <li><a href="#">Image Lightbox</a></li>-->
                                 <!--                                <li><a href="#">iOS & Android</a></li>-->
                                 <!--                                <li><a href="#">Messages</a></li>-->
