--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -446,11 +446,13 @@
 
     <footer class="footer_area footer_p_top f_bg_color">
         <img class="p_absolute leaf" src="../static/img/v.svg" alt="">
-        <img class="p_absolute f_man wow fadeInLeft" data-wow-delay="0.4s" src="../static/img/home_two/f_man.png" alt="">
+        <img class="p_absolute f_man wow fadeInLeft" data-wow-delay="0.4s" src="../static/img/home_two/f_man.png"
+             alt="">
         <img class="p_absolute f_cloud" src="../static/img/home_two/cloud.png" alt="">
         <img class="p_absolute f_email" src="../static/img/home_two/email-icon.png" alt="">
         <img class="p_absolute f_email_two" src="../static/img/home_two/email-icon_two.png" alt="">
-        <img class="p_absolute f_man_two wow fadeInLeft" data-wow-delay="0.2s" src="../static/img/home_two/man.png" alt="">
+        <img class="p_absolute f_man_two wow fadeInLeft" data-wow-delay="0.2s" src="../static/img/home_two/man.png"
+             alt="">
         <div class="footer_top">
             <div class="container">
                 <div class="row">
@@ -482,10 +484,10 @@
                                 <li><a href="/forum">Forum</a></li>
                                 <li><a href="/job-recommendation">Job Recommendation</a></li>
 
-<!--                                <li><a href="changelog.html">Changelog</a></li>-->
-<!--                                <li><a href="Onepage.html">Onepage Docs</a></li>-->
-<!--                                <li><a href="#">Conversion Tracking</a></li>-->
-<!--                                <li><a href="cheatsheet.html">Cheatseet</a></li>-->
+                                <!--                                <li><a href="changelog.html">Changelog</a></li>-->
+                                <!--                                <li><a href="Onepage.html">Onepage Docs</a></li>-->
+                                <!--                                <li><a href="#">Conversion Tracking</a></li>-->
+                                <!--                                <li><a href="cheatsheet.html">Cheatseet</a></li>-->
                             </ul>
                         </div>
                     </div>
@@ -494,12 +496,13 @@
                         <div class="f_widget link_widget wow fadeInUp" data-wow-delay="0.4s">
                             <h3 class="f_title">Blog</h3>
                             <ul class="list-unstyled link_list">
-                                <li><a href="life-skills.html">Life Skills</a></li>
-                                <li><a href="physical-health.html">Physical Health</a></li>
-                                <li><a href="mental-health.html">Mental Health</a></li>
-<!--                                <li><a href="#">Image Lightbox</a></li>-->
-<!--                                <li><a href="#">iOS & Android</a></li>-->
-<!--                                <li><a href="#">Messages</a></li>-->
+                                <li><a href="/blog">Blog</a></li>
+                                <li><a href="/blog-category/Skills">Life Skills</a></li>
+                                <li><a href="/blog-category/Health">Physical & Mental Health</a></li>
+                                <li><a href="/blog-category/Others">Others</a></li>
+                                <!--                                <li><a href="#">Image Lightbox</a></li>-->
+                                <!--                                <li><a href="#">iOS & Android</a></li>-->
+                                <!--                                <li><a href="#">Messages</a></li>-->
                             </ul>
                         </div>
                     </div>
@@ -511,9 +514,9 @@
                                 <li><a href="/about-us">About Us</a></li>
                                 <li><a href="/contact-us">Contact Us</a></li>
 
-<!--                                <li><a href="#">Careers</a></li>-->
-<!--                                <li><a href="#">HerBlossom for Good</a></li>-->
-<!--                                <li><a href="#">Contact Us</a></li>-->
+                                <!--                                <li><a href="#">Careers</a></li>-->
+                                <!--                                <li><a href="#">HerBlossom for Good</a></li>-->
+                                <!--                                <li><a href="#">Contact Us</a></li>-->
                             </ul>
                         </div>
                     </div>
