--- a/code/templates/forum-topics.html
+++ b/code/templates/forum-topics.html
@@ -570,13 +570,15 @@
             <!-- /.container -->
         </div>
         <!-- /.call-to-action -->
-        <footer class="footer_area f_bg_color">
+        <footer class="footer_area footer_p_top f_bg_color">
             <img class="p_absolute leaf" src="../static/img/v.svg" alt="">
-            <img class="p_absolute f_man wow fadeInRight" data-wow-delay="0.6s" src="../static/img/home_two/f_man.png" alt="">
+            <img class="p_absolute f_man wow fadeInLeft" data-wow-delay="0.4s" src="../static/img/home_two/f_man.png"
+                 alt="">
             <img class="p_absolute f_cloud" src="../static/img/home_two/cloud.png" alt="">
             <img class="p_absolute f_email" src="../static/img/home_two/email-icon.png" alt="">
             <img class="p_absolute f_email_two" src="../static/img/home_two/email-icon_two.png" alt="">
-            <img class="p_absolute f_man_two wow fadeInLeft" data-wow-delay="0.3s" src="../static/img/home_two/man.png" alt="">
+            <img class="p_absolute f_man_two wow fadeInLeft" data-wow-delay="0.2s" src="../static/img/home_two/man.png"
+                 alt="">
             <div class="footer_top">
                 <div class="container">
                     <div class="row">
@@ -596,55 +598,62 @@
                                 </ul>
                             </div>
                         </div>
+
+
+                        <div class="col-lg-3 col-sm-6">
+                            <div class="f_widget link_widget pl_70 wow fadeInUp" data-wow-delay="0.6s">
+                                <h3 class="f_title">HerBlossom Pages</h3>
+                                <ul class="list-unstyled link_list">
+                                    <li><a href="/index">Home</a></li>
+                                    <li><a href="/signin">Sign In</a></li>
+                                    <li><a href="/blog">Blog</a></li>
+                                    <li><a href="/forum">Forum</a></li>
+                                    <li><a href="/job-recommendation">Job Recommendation</a></li>
+
+                                    <!--                                <li><a href="changelog.html">Changelog</a></li>-->
+                                    <!--                                <li><a href="Onepage.html">Onepage Docs</a></li>-->
+                                    <!--                                <li><a href="#">Conversion Tracking</a></li>-->
+                                    <!--                                <li><a href="cheatsheet.html">Cheatseet</a></li>-->
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-2 col-sm-6">
+                            <div class="f_widget link_widget wow fadeInUp" data-wow-delay="0.4s">
+                                <h3 class="f_title">Blog</h3>
+                                <ul class="list-unstyled link_list">
+                                    <li><a href="/blog">Blog</a></li>
+                                    <li><a href="/blog-category/Skills">Life Skills</a></li>
+                                    <li><a href="/blog-category/Health">Physical & Mental Health</a></li>
+                                    <li><a href="/blog-category/Others">Others</a></li>
+                                    <!--                                <li><a href="#">Image Lightbox</a></li>-->
+                                    <!--                                <li><a href="#">iOS & Android</a></li>-->
+                                    <!--                                <li><a href="#">Messages</a></li>-->
+                                </ul>
+                            </div>
+                        </div>
+
                         <div class="col-lg-3 col-sm-6">
                             <div class="f_widget link_widget pl_30 wow fadeInUp" data-wow-delay="0.2s">
                                 <h3 class="f_title">Company</h3>
                                 <ul class="list-unstyled link_list">
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Testimonials</a></li>
-                                    <li><a href="#">Affiliates</a></li>
-                                    <li><a href="#">Partners</a></li>
-                                    <li><a href="#">Careers</a></li>
-                                    <li><a href="#">HerBlossom for Good</a></li>
-                                    <li><a href="#">Contact Us</a></li>
+                                    <li><a href="/about-us">About Us</a></li>
+                                    <li><a href="/contact-us">Contact Us</a></li>
+
+                                    <!--                                <li><a href="#">Careers</a></li>-->
+                                    <!--                                <li><a href="#">HerBlossom for Good</a></li>-->
+                                    <!--                                <li><a href="#">Contact Us</a></li>-->
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-2 col-sm-6">
-                            <div class="f_widget link_widget wow fadeInUp" data-wow-delay="0.4s">
-                                <h3 class="f_title">Support</h3>
-                                <ul class="list-unstyled link_list">
-                                    <li><a href="index-3.html">Help Desk</a></li>
-                                    <li><a href="#">Knowledge Base</a></li>
-                                    <li><a href="#">Live Chat</a></li>
-                                    <li><a href="#">Integrations</a></li>
-                                    <li><a href="#">Reports</a></li>
-                                    <li><a href="#">iOS & Android</a></li>
-                                    <li><a href="#">Messages</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-6">
-                            <div class="f_widget link_widget pl_70 wow fadeInUp" data-wow-delay="0.6s">
-                                <h3 class="f_title">Doc Pages</h3>
-                                <ul class="list-unstyled link_list">
-                                    <li><a href="doclist.html">Doc Topic</a></li>
-                                    <li><a href="#">Free Training</a></li>
-                                    <li><a href="doc-archive.html">Doc Archive</a></li>
-                                    <li><a href="changelog.html">Changelog</a></li>
-                                    <li><a href="Onepage.html">Onepage Docs</a></li>
-                                    <li><a href="#">Conversion Tracking</a></li>
-                                    <li><a href="cheatsheet.html">Cheatseet</a></li>
-                                </ul>
-                            </div>
-                        </div>
+
                     </div>
                     <div class="border_bottom"></div>
                 </div>
             </div>
             <div class="footer_bottom text-center">
                 <div class="container">
-                    <p>© 2020 All Rights Reserved by <a href="index.html">HerBlossom</a></p>
+                    <p>© 2025 All Rights Reserved by <a href="/index">HerBlossom</a></p>
                 </div>
             </div>
         </footer>
