--- a/code/templates/job-recommendation.html
+++ b/code/templates/job-recommendation.html
@@ -221,9 +221,6 @@
                     <option value="Restaurant">Restaurant</option>
                     <option value="Service">Service</option>
                     <option value="Parenting">Parenting</option>
-
-
-
                 </select>
             </div>
         </div>
@@ -432,6 +429,93 @@ select.form-select:active {
 
 </style>
 
+<footer class="footer_area footer_p_top f_bg_color">
+        <img class="p_absolute leaf" src="../static/img/v.svg" alt="">
+        <img class="p_absolute f_man wow fadeInLeft" data-wow-delay="0.4s" src="../static/img/home_two/f_man.png"
+             alt="">
+        <img class="p_absolute f_cloud" src="../static/img/home_two/cloud.png" alt="">
+        <img class="p_absolute f_email" src="../static/img/home_two/email-icon.png" alt="">
+        <img class="p_absolute f_email_two" src="../static/img/home_two/email-icon_two.png" alt="">
+        <img class="p_absolute f_man_two wow fadeInLeft" data-wow-delay="0.2s" src="../static/img/home_two/man.png"
+             alt="">
+        <div class="footer_top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-sm-6">
+                        <div class="f_widget subscribe_widget wow fadeInUp">
+                            <a href="index.html" class="f_logo"><img src="../static/img/logo.png" alt=""></a>
+                            <h4 class="c_head">Subscribe to our newsletter</h4>
+                            <form action="#" class="footer_subscribe_form">
+                                <input type="email" placeholder="Email" class="form-control">
+                                <button type="submit" class="s_btn">Send</button>
+                            </form>
+                            <ul class="list-unstyled f_social_icon">
+                                <li><a href="#"><i class="social_facebook"></i></a></li>
+                                <li><a href="#"><i class="social_twitter"></i></a></li>
+                                <li><a href="#"><i class="social_vimeo"></i></a></li>
+                                <li><a href="#"><i class="social_linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                    <div class="col-lg-3 col-sm-6">
+                        <div class="f_widget link_widget pl_70 wow fadeInUp" data-wow-delay="0.6s">
+                            <h3 class="f_title">HerBlossom Pages</h3>
+                            <ul class="list-unstyled link_list">
+                                <li><a href="/index">Home</a></li>
+                                <li><a href="/signin">Sign In</a></li>
+                                <li><a href="/blog">Blog</a></li>
+                                <li><a href="/forum">Forum</a></li>
+                                <li><a href="/job-recommendation">Job Recommendation</a></li>
+
+                                <!--                                <li><a href="changelog.html">Changelog</a></li>-->
+                                <!--                                <li><a href="Onepage.html">Onepage Docs</a></li>-->
+                                <!--                                <li><a href="#">Conversion Tracking</a></li>-->
+                                <!--                                <li><a href="cheatsheet.html">Cheatseet</a></li>-->
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-2 col-sm-6">
+                        <div class="f_widget link_widget wow fadeInUp" data-wow-delay="0.4s">
+                            <h3 class="f_title">Blog</h3>
+                            <ul class="list-unstyled link_list">
+                                <li><a href="/blog">Blog</a></li>
+                                <li><a href="/blog-category/Skills">Life Skills</a></li>
+                                <li><a href="/blog-category/Health">Physical & Mental Health</a></li>
+                                <li><a href="/blog-category/Others">Others</a></li>
+                                <!--                                <li><a href="#">Image Lightbox</a></li>-->
+                                <!--                                <li><a href="#">iOS & Android</a></li>-->
+                                <!--                                <li><a href="#">Messages</a></li>-->
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-sm-6">
+                        <div class="f_widget link_widget pl_30 wow fadeInUp" data-wow-delay="0.2s">
+                            <h3 class="f_title">Company</h3>
+                            <ul class="list-unstyled link_list">
+                                <li><a href="/about-us">About Us</a></li>
+                                <li><a href="/contact-us">Contact Us</a></li>
+
+                                <!--                                <li><a href="#">Careers</a></li>-->
+                                <!--                                <li><a href="#">HerBlossom for Good</a></li>-->
+                                <!--                                <li><a href="#">Contact Us</a></li>-->
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="border_bottom"></div>
+            </div>
+        </div>
+        <div class="footer_bottom text-center">
+            <div class="container">
+                <p>© 2025 All Rights Reserved by <a href="/index">HerBlossom</a></p>
+            </div>
+        </div>
+    </footer>
         <!-- Back to top button -->
         <a id="back-to-top" title="Back to Top"></a>
 
@@ -612,8 +696,15 @@ select.form-select:active {
 
             // 展示職位詳情
             function showJobDetail(id) {
-                $('.job_detail').addClass('d-none');
-                $(`#${id}`).removeClass('d-none');
+                // 隐藏所有 job_detail div
+                const allDetails = document.querySelectorAll('.job_detail');
+                allDetails.forEach(detail => detail.classList.add('d-none'));
+
+                // 显示目标 job_id 对应的 div
+                const targetDetail = document.getElementById(id);
+                if (targetDetail) {
+                    targetDetail.classList.remove('d-none');
+                }
 
                 // 读取经纬度
                 const $detail = $('#' + id);
