--- a/code/templates/post-edit.html
+++ b/code/templates/post-edit.html
@@ -151,58 +151,34 @@
                             <div class="scroll">
                                 <ul class="list-unstyled nav-sidebar">
                                     <li class="nav-item">
-                                        <a href="doclist.html" class="nav-link"><img src="../static/img/side-nav/home.png" alt="">Home</a>
+                                        <a href="/index" class="nav-link"><img src="../static/img/side-nav/home.png" alt="">Home</a>
                                     </li>
-                                    <li class="nav-item">
-                                        <a href="shortcode.html" class="nav-link"><img src="../static/img/side-nav/briefcase.png" alt="briefcase">Shortcodes</a>
-                                        <span class="icon"><i class="arrow_carrot-down"></i></span>
-                                        <ul class="list-unstyled dropdown_nav">
-                                            <li><a href="tab.html">Tabs</a></li>
-                                            <li><a href="accordion.html">Accordion</a></li>
-                                            <li><a href="notice.html">Notices</a></li>
-                                            <li><a href="table.html">Table</a></li>
-                                            <li><a href="lightbox.html">Image Lightbox</a></li>
-                                            <li><a href="tooltip.html">Tooltip</a></li>
-                                            <li><a href="can-use.html">Can I Use</a></li>
-                                        </ul>
-                                    </li>
+
                                     <li class="nav-item active">
-                                        <a href="layouts.html" class="nav-link"><img src="../static/img/side-nav/coding.png" alt="">Layouts</a>
+                                        <a href="/forum-topics" class="nav-link"><img src="../static/img/side-nav/chat1.png" alt="">Forum</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="/blog" class="nav-link"><img src="../static/img/side-nav/document2.png" alt="">Blog</a>
                                         <span class="icon"><i class="arrow_carrot-down"></i></span>
                                         <ul class="list-unstyled dropdown_nav">
-                                            <li><a href="layouts.html">Both Sidebar</a></li>
-                                            <li><a href="layout-leftsidebar.html" class="active">Left Sidebar</a></li>
-                                            <li><a href="layout-full.html">Full-width</a></li>
-                                            <li><a href="sticky-menu.html">Sticky Menu</a></li>
-                                            <li><a href="simple-footer.html">Simple Footer</a></li>
+                                            <li><a href="/blog">Blog</a></li>
+                                            <li><a href="/blog-category/Skills">Life Skills</a></li>
+                                            <li><a href="/blog-category/Health">Physical & Mental Health</a></li>
+                                            <li><a href="/blog-category/Others">Others</a></li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="tour.html" class="nav-link"><img src="../static/img/side-nav/chat1.png" alt="">Tour</a>
+                                        <a href="typography.html" class="nav-link"><img src="../static/img/side-nav/document.png" alt="">Company</a>
                                         <span class="icon"><i class="arrow_carrot-down"></i></span>
                                         <ul class="list-unstyled dropdown_nav">
-                                            <li><a href="image-pointing.html">Image Hotspots</a></li>
-                                            <li><a href="tour.html">Application Interface</a></li>
+                                            <li><a href="/about-us">About Us</a></li>
+                                            <li><a href="/contact-us">Contact Us</a></li>
                                         </ul>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="typography.html" class="nav-link"><img src="../static/img/side-nav/document.png" alt="">Content</a>
-                                        <span class="icon"><i class="arrow_carrot-down"></i></span>
-                                        <ul class="list-unstyled dropdown_nav">
-                                            <li><a href="typography.html">Typography</a></li>
-                                            <li><a href="code.html">Code</a></li>
-                                            <li><a href="image.html">Image</a></li>
-                                            <li><a href="video.html">Video</a></li>
-                                            <li><a href="keyboard-shortcuts.html">Keyboard Shortcuts</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="changelog.html" class="nav-link"><img src="../static/img/side-nav/document2.png" alt="">Change Log</a>
                                     </li>
                                 </ul>
                                 <ul class="list-unstyled nav-sidebar coding_nav">
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link"><img src="../static/img/side-nav/account.png" alt="">Account</a>
+                                        <a href="/signin" class="nav-link"><img src="../static/img/side-nav/account.png" alt="">Account</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="#" class="nav-link"><img src="../static/img/side-nav/coding.png" alt="">Development</a>
@@ -284,8 +260,32 @@
 
                             <!-- Submit Button -->
                             <div class="action-button-container action-btns">
-                                <button type="submit" class="action_btn btn-ans ask-btn reply-btn">Post</button>
-                                <a href="/forum-topics" class="action_btn btn-ans ask-btn too-btn">Cancel</a>
+                                <button type="submit" class="action_btn btn-ans ask-btn reply-btn" style="height: 60px">
+                                    <div class="svg-wrapper-1">
+                                        <div class="svg-wrapper">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24"
+                                                 height="24">
+                                                <path fill="none" d="M0 0h24v24H0z"></path>
+                                                <path fill="currentColor"
+                                                      d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z"></path>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                    <span>Post</span>
+                                </button>
+                                <a href="/forum-topics" class="action_btn btn-ans ask-btn too-btn" style="height: 60px">
+                                    <div class="svg-wrapper-1">
+                                        <div class="svg-wrapper">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                                <path fill="none" d="M0 0h24v24H0z"></path>
+                                                <path fill="currentColor"
+                                                      d="M18.3 5.71a1 1 0 0 0-1.42 0L12 10.59 7.12 5.7a1 1 0 1 0-1.41 1.42L10.59 12l-4.88 4.88a1 1 0 0 0 1.41 1.42L12 13.41l4.88 4.89a1 1 0 0 0 1.42-1.42L13.41 12l4.89-4.88a1 1 0 0 0 0-1.41z">
+                                                </path>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                    <span>Cancel</span>
+                                </a>
                             </div>
 
                         </form>
@@ -339,7 +339,7 @@
                                     <li><a href="/index">Home</a></li>
                                     <li><a href="/signin">Sign In</a></li>
                                     <li><a href="/blog">Blog</a></li>
-                                    <li><a href="/forum">Forum</a></li>
+                                    <li><a href="/forum-topics">Forum</a></li>
                                     <li><a href="/job-recommendation">Job Recommendation</a></li>
 
                                     <!--                                <li><a href="changelog.html">Changelog</a></li>-->
