change send button style

--- a/code/templates/contact.html
+++ b/code/templates/contact.html
@@ -82,6 +82,7 @@
                             <ul class="dropdown-menu dropdown_menu_two">
                                 <li class="nav-item">
                                     <a href="/contact-us" class="nav-link">
+                                        <img src="../static/img/tick.png" alt="">
                                         <div class="text">
                                             <h5>Contact Us</h5>
                                             <p>Send your feedback here!</p>
