--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -76,13 +76,9 @@
                             <span class="or-text"></span>
                         </div>
                         <form action="#" class="row login_form">
-                            <div class="col-sm-6 form-group">
+                            <div class="col-lg-12 form-group">
                                 <div class="small_text">❥ First name</div>
-                                <input type="text" class="form-control" name="name" id="name" placeholder="Please enter your name" required>
-                            </div>
-                            <div class="col-sm-6 form-group">
-                                <div class="small_text">❥ Last name</div>
-                                <input type="text" class="form-control" name="lname" id="lname" placeholder="Jewel">
+                                <input type="text" class="form-control" name="name" id="name" placeholder="Please enter your name" required style="width: 100%; padding-right: 130px;">
                             </div>
                             <div class="col-lg-12 form-group">
                                 <div class="small_text">❥ Your email</div>
