--- a/code/templates/forum-topics.html
+++ b/code/templates/forum-topics.html
@@ -334,17 +334,9 @@
 
                             </div>
 
-                            <div class="widget usefull_links_widget">
-                                <h4 class="c_head">Usefull Links</h4>
-                                <ul class="list-unstyled usefull-links">
-                                    <li><i class="icon_lightbulb_alt"></i><a href="#">FAQs</a></li>
-                                    <li><i class="icon_clock_alt"></i><a href="#">Popular</a></li>
-                                    <li><i class="icon_piechart"></i><a href="#">Recent</a></li>
-                                    <li><i class="icon_info_alt"></i><a href="#">Unanswered</a></li>
-                                </ul>
-                            </div>
+
                             <div class="widget ticket_widget">
-                                <h4 class="c_head">Ticket Categories</h4>
+                                <h4 class="c_head">Ranking List</h4>
 
                                 <ul class="list-unstyled ticket_categories">
                                     <li><img src="../static/img/home_support/cmm5.png" alt="category"><a href="#">Docs WordPress
