--- a/code/templates/forum-single.html
+++ b/code/templates/forum-single.html
@@ -403,7 +403,7 @@ font-family: 'Dancing Script', cursive;
                             </div>
                             <div class="col-lg-3">
                                 <div class="action-button-container">
-                                    <a href="#" class="action_btn btn-ans ask-btn">Ask Question</a>
+                                    <a href="/post-edit" class="action_btn btn-ans">Ask a Question</a>
                                 </div>
                             </div>
                         </div>
@@ -550,7 +550,7 @@ font-family: 'Dancing Script', cursive;
                         <img src="../static/img/home_support/chat-smile.png" alt="">
                         <h2 class="action-title">New to Communities?</h2>
                     </div>
-                    <a href="#" class="action_btn">Join the community <i class="arrow_right"></i></a>
+                    <a href="/forum-topics" class="action_btn">Join the community <i class="arrow_right"></i></a>
                 </div>
                 <!-- /.action-content-wrapper -->
             </div>
