--- a/code/templates/life-skills.html
+++ b/code/templates/life-skills.html
@@ -31,7 +31,7 @@
                     <h4><span>Her</span>Blossom</h4>
                 </div>
             </div>
-            <h2 class="head">Did You Know?</h2>
+            <h2 class="head">WELCOME GIRLS!</h2>
             <p></p>
         </div>
     </div>
@@ -148,7 +148,7 @@
                                         </div>
                                         <div class="img_pointing two tooltips" data-tooltip-content="#img_tooltiptwo">
                                             <div class="dot"></div>
-                                        </div>
+                                         </div>
                                         <div class="img_pointing three tooltips"
                                              data-tooltip-content="#img_tooltipthree">
                                             <div class="dot"></div>
