--- a/code/templates/useful-skills.html
+++ b/code/templates/useful-skills.html
@@ -26,7 +26,7 @@
                     <h4><span>HerBlossom</span></h4>
                 </div>
             </div>
-            <h2 class="head">Did You Know?</h2>
+            <h2 class="head">WELCOME GIRLS!</h2>
             <p></p>
         </div>
     </div>
